*** 20011027_3 by bill
- pro died, he shouldn't be in the Hybrid-team


*** 20011027_2 by db
- removed another typedef 



*** 20011027_1 by db
- some res.c fixes



*** 20011025_2 by db
- fixed formatting in s_conf.c
- removed obsfuscation in res.c



*** 20011025_1 by leeh
- as discussed on IRC.


*** 20011024_3 by wcampbel
Misc doc cleanups (approved by Diane)


*** 20011024_2 by db
- removed NO_CHANOPS_ON_SPLIT



*** 20011024_1 by wcampbel
Corrected two pieces of information in example.conf


*** 20011019_1 by db
- ensure all va_end match up with va_start in send.c 
  as pointed out by Aaron Campbell



*** 20011017_1 by db
- removed PACE_WALLOPS, this affects config.h m_info.h m_info.c
  m_wallops.c m_operwall.c 

- cleaned up formatting in res.c so I could follow the logic, still
  havent' found the bug

- cleaned up formatting in dbuf.c



*** 20011011_1 by db
We have to have to have to make sure the config.h is sane, EFNet admins are
lazy.



*** 20011008_4 by lusky
- revved patchlevel to 6.2.1rc1
- gutted the internal dns cache, BIND does a better job
- fixed compile error in last commit


*** 20011008_3 by db
- fixed another potential bug.



*** 20011008_2 by db
IP I lines should also check username



*** 20011008_1 by db
- fix for spoofing bug



*** 20010925_1 by lusky
- moved TS5 to main config section, enabled by default
- revved patchlevel to 6.2


*** 20010829_1 by lusky
- Fix for messages_cust.tab dependencies (wc)
- Fix for oper modes from conf (wc)
- made IGNORE_BOGUS_TS undef by default for now



*** 20010811_2 by lusky
- revved patchlevel to 6.2rc1


*** 20010811_1 by lusky
- made TS5 undef'd by default for this RC



*** 20010810_4 by leeh
- if a channel is unjuped and is empty, destroy it


*** 20010810_3 by leeh
- cleanup of serveropts, as per dracus' patch


*** 20010810_2 by leeh
- added documentation for TS5


*** 20010810_1 by leeh
- wrapped TS5 in #ifdef's
  I need to add doc/ts5.txt later


*** 20010806_2 by leeh